--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
                 <h1><span>Phil "Mr Whiskers" Skentelbery</span>, security pragmatist, mini painter, nerd
             </header>
             <nav>
-                <a href="https://rediverge.com">Rediverge</a>
-                <a href="https://twitter.com/johnonolan">Twitter</a>
-                <a href="https://instagram.com/johnonolan">Instagram</a>
-                <a href="https://teamsat.io">TeamSat</a>
+                <a rel="me" href="https://mastodon.social/@mrwiskers">Mastodon</a>
             </nav>
         </section>
     </body>
