--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             </header>
             <nav>
                 <a rel="me" href="https://mastodon.social/@mrwiskers">Mastodon</a>
+                <a href="https://https://tsol.re/linkedin">LinkedIn</a>
             </nav>
         </section>
     </body>
