--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <nav>
                 <a rel="me" href="https://mastodon.social/@mrwiskers">Mastodon</a>
                 <a href="https://https://tsol.re/linkedin">LinkedIn</a>
+                <a href="https://github.com/philskents">GitHub</a>
             </nav>
         </section>
     </body>
