--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Design courtesy of https://john.onolan.org-->
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
