Update Mastodon link after server move

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <h1><span>Phil "Mr Whiskers" Skentelbery</span>, security pragmatist, mini painter, nerd
             </header>
             <nav>
-                <a rel="me" href="https://mastodon.social/@mrwiskers">Mastodon</a>
+                <a rel="me" href="https://hackers.town/@MrWhiskers">Mastodon</a>
                 <a href="https://https://tsol.re/linkedin">LinkedIn</a>
                 <a href="https://github.com/philskents">GitHub</a>
             </nav>
