added link to keyoxide sig profile

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <a rel="me" href="https://hackers.town/@MrWhiskers">Mastodon</a>
                 <a href="https://https://tsol.re/linkedin">LinkedIn</a>
                 <a href="https://github.com/philskents">GitHub</a>
+                <a href="https://links.thesatelliteoflove.com/keyoxide.txt">Keyoxide</a>
             </nav>
         </section>
     </body>
